hacked the one pixel gap on the right of the screen on mobile view. Just temporary fix, should be replaced with proper fix when possible

--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -4,4 +4,5 @@
   padding: 10px;
   margin: 0px;
   background-color: rgb(35, 38, 53); 
+  border: none;
 }
