--- a/src/index.css
+++ b/src/index.css
@@ -24,13 +24,18 @@ time, mark, audio, video {
 html {
 	overflow: hidden;
 	height: 100%;
+/* the line below is fixing the one pixel gap on the right 
+of the screen on mobile view. Check if it's necessary and if there's 
+better fix for that than this hack */
+	margin: 0 -1px 0 0;
 }
-
 body {
 	height: 100%;
 	overflow: auto;
-/* end; see previous comment */
+}
+/* end;  */
 
+body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
